sdk/src/snapshots/touchportal_sdk__actions__tests__action_validation_invalid_choice_initial.snap
---
source: sdk/src/actions.rs
expression: error_msg
---
initial value invalid_choice is not among valid choices ["option_a", "option_b"]
