sdk/src/snapshots/touchportal_sdk__actions__tests__action_validation_missing_data_field_in_lines.snap
---
source: sdk/src/actions.rs
expression: error_msg
---
'{$missing_field$}' not found for language 'default'
