sdk/src/snapshots/touchportal_sdk__actions__tests__serialize_tutorial_sdk_plugin_dynamic_action.snap
---
source: sdk/src/actions.rs
expression: action
---
{
  "id": "tp_pl_action_002",
  "name": "Execute Dynamic Action",
  "type": "communicate",
  "data": [
    {
      "id": "tp_pl_002_text",
      "type": "text",
      "default": ""
    }
  ],
  "lines": {
    "action": [
      {
        "language": "default",
        "data": [
          {
            "lineFormat": "Do something with value {$tp_pl_002_text$}"
          }
        ]
      }
    ]
  }
}
