sdk/src/snapshots/touchportal_sdk__actions__tests__serialize_tutorial_sdk_plugin_static_action.snap
---
source: sdk/src/actions.rs
expression: action
---
{
  "id": "tp_pl_action_001",
  "name": "Execute action",
  "type": "execute",
  "execution_cmd": "powershell [console]::beep(200,500)",
  "data": [],
  "lines": {
    "action": [
      {
        "language": "default",
        "data": [
          {
            "lineFormat": "Play Beep Sound"
          }
        ]
      }
    ]
  }
}
